# sdxl-asset-manager

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  LESSONS_LEARNED.md  README.md  SECURITY.md  SETUP.md  pyproject.toml  requirements.txt  schema.sql
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-pr.yml  claude.yml
data/: README.md
data/yamls/: sample_run.yaml
docs/: CI-COMPATIBILITY.md
scripts/: dev-check.sh
src/: __init__.py  __main__.py  cli.py  notion_client.py  notion_sync.py  yaml_loader.py
src/agent_tools/: __init__.py  chat_agent.py
src/cli/: __init__.py  agent.py  db.py  notion.py  run.py  search.py  utils.py  yaml_cmd.py
src/models/: __init__.py  database.py
src/utils/: __init__.py  db_init.py  db_utils.py
tests/: test_agent_tools.py  test_cli.py  test_cli_agent.py  test_cli_db.py  test_cli_integration.py  test_cli_notion.py  test_cli_yaml.py  test_database.py  test_notion_client.py  test_notion_sync.py  test_yaml_loader.py
